...
              style={isAdmin ? styles.tabAdmin : styles.tab}
            >
              <View>{icons[route.name]}</View>

              <Text style={[styles.label, { color: iconColor }]}>
                {route.name === "Dashboard"
                  ? "Início"
                  : route.name === "Bills"
                    ? "Contribuições"
                    : route.name === "Profile"
                      ? "Perfil"
                      : "Configurações"}
              </Text>
...
